--- a/backend/src/main/webapp/app/views/forecast/main.html
+++ b/backend/src/main/webapp/app/views/forecast/main.html
@@ -10,13 +10,13 @@
 
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">ผลประมาณการ</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> แสดงผลประมาณการ
@@ -28,7 +28,7 @@
 							<form class="form-inline" ng-submit="search()" name="searchForm" novalidate>
 							
 								<div class="row">
-									<div class="col-lg-12">
+									<div class="col-md-12">
 									
 									  <div class="form-group input-group" ng-show="group2">
 									  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
