--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -52,7 +52,7 @@
                  	
              </div>
          </div>
-         <!-- /.col-lg-4 -->
+         <!-- /.col-md-4 -->
      </div>
      <div class="col-md-4">
          <div class="panel panel-red" style="margin: 0;">
@@ -99,7 +99,7 @@
                	<code>กรุณาตรวจสอบ Username และ Password !!!</code>
              </div>
          </div>
-         <!-- /.col-lg-4 -->
+         <!-- /.col-md-4 -->
      </div>
      <div class="col-md-4">
          <div class="panel panel-green" style="margin: 0;">
@@ -138,6 +138,6 @@
                  	<span><small>จำนวน {{ checkList_3.length || 0 }} บัญชี</small></span>
              </div>
          </div>
-         <!-- /.col-lg-4 -->
+         <!-- /.col-md-4 -->
      </div>
 </div>            
