--- a/backend/src/main/webapp/app/views/product/import_payment_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_payment_conf.html
@@ -1,6 +1,6 @@
 <div ui-view>
 	<div class="row">  
-		<div class="advancedDemo col-lg-12">
+		<div class="advancedDemo col-md-12">
 			<ul dnd-list="containers"
 			    dnd-allowed-types="['containerType']"
 			    dnd-external-sources="true"
