--- a/backend/src/main/webapp/app/views/batch_notice/main.html
+++ b/backend/src/main/webapp/app/views/batch_notice/main.html
@@ -6,13 +6,13 @@
 </style>
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">Batch Notice</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                 	<i class="fa fa-list-alt fa-fw"></i> Batch Notice
@@ -74,8 +74,8 @@
 					               </div>
 					           </div>
 					           <div class="row">
-					           		<div class="col-lg-6"></div>
-						            <div class="col-lg-6">
+					           		<div class="col-md-6"></div>
+						            <div class="col-md-6">
 						            	<input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader"
 						            	accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
 						            </div>
