--- a/backend/src/main/webapp/app/views/contact_us/main.html
+++ b/backend/src/main/webapp/app/views/contact_us/main.html
@@ -1,15 +1,15 @@
 
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<h1 class="page-header">Contact Us</h1>
 	</div>
 </div>
 
    <div class="row">
-       <div class="col-lg-12">
+       <div class="col-md-12">
        
            <div class="row">
-			<div class="col-lg-4 col-lg-offset-4">
+			<div class="col-md-4 col-md-offset-4">
 				<div class="panel panel-primary">
                     <div class="panel-body">
 	                    <div class="well well-sm" style="margin-bottom: 0;">
