--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -1,15 +1,15 @@
 
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<h1 class="page-header">หน้าหลัก</h1>
 	</div>
 </div>
 
    <div class="row">
-       <div class="col-lg-12">
+       <div class="col-md-12">
        
            <div class="row">
-			<div class="col-lg-4 col-lg-offset-4">
+			<div class="col-md-4 col-md-offset-4">
 				<div class="panel panel-primary">
 					<div class="panel-heading" style="text-align: center;">
                     	<label>{{ companyName }}</label>
@@ -23,15 +23,15 @@
 	                    <div class="well well-sm" style="margin-bottom: 0;">
 	                        <div class="form-horizontal" style="padding-top: 15px;">
 		                        <div class="form-group" >
-									<label class="col-lg-4 control-label">ชื่อ</label>
+									<label class="col-md-4 control-label">ชื่อ</label>
 									<span class="form-control" style="color: #337AB7;">{{ title }} {{ firstName }} {{ lastName }}</span>
 								</div>
 								<div class="form-group" >
-									<label class="col-lg-4 control-label">ตำแหน่ง</label>
+									<label class="col-md-4 control-label">ตำแหน่ง</label>
 									<span class="form-control" style="color: #337AB7;">{{ position }}</span>
 								</div>
 		                        <div class="form-group">
-									<label class="col-lg-4 control-label">เบอร์โทร</label>
+									<label class="col-md-4 control-label">เบอร์โทร</label>
 									<span class="form-control" style="color: #337AB7;">{{ phoneNumber }}</span>
 								</div>
 	                        </div>
