--- a/backend/src/main/webapp/app/views/import_others/import_others_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_conf.html
@@ -1,12 +1,12 @@
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">นำเข้า{{ menuName }}</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
@@ -20,14 +20,14 @@
 
 					
 					<div ui-view>
-						<div class="col-lg-12">
+						<div class="col-md-12">
 							<code ng-show="isOver">จำนวน field เกินกำหนด [Limited 30 fields]</code>
 							<div class="form-inline">
 								<button type="button" class="btn btn-info pull-right" style="margin-bottom: 5px;" ng-show="containers[0].length > 0" ng-click="detailDisplayConf()">ตั้งค่าหน้าแสดงข้อมูล</button>
 							</div>
 						</div>  
 						<div class="row">  
-							<div class="advancedDemo col-lg-12">
+							<div class="advancedDemo col-md-12">
 								<ul dnd-list="containers"
 								    dnd-allowed-types="['containerType']"
 								    dnd-external-sources="true"
@@ -129,7 +129,7 @@
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 				  <div class="panel-body">
 				  	<div class="row" ng-repeat="file in files"> 
-				  		<div ng-class="{'col-lg-8': haveDateInput, 'col-lg-12': !haveDateInput}">
+				  		<div ng-class="{'col-md-8': haveDateInput, 'col-md-12': !haveDateInput}">
 					        <span>{{ $index + 1 }}. </span>
 					        <input type="checkbox" ng-model="file.isChk" ng-change="updateNoticeForms(file.templateName, noticeForms, file.isChk)">
 					        <span>{{ file.templateName }}</span>
