--- a/backend/src/main/webapp/app/views/import_others/import_others_detail_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_detail_conf.html
@@ -1,5 +1,5 @@
 
-<div class="col-lg-12">
+<div class="col-md-12">
 	<div class="form-inline" style="text-align: center;">
 		<form ng-submit="addContainer()">
 			<div class="form-group input-group">
@@ -15,7 +15,7 @@
 
 
 <div class="detailConf">
-       <div class="dropzone box box-yellow col-lg-12" style="padding: 0;">
+       <div class="dropzone box box-yellow col-md-12" style="padding: 0;">
        
 		<ul dnd-list="model"
 		    dnd-allowed-types="['containerType']"
