--- a/backend/src/main/webapp/app/views/manage_notice/main.html
+++ b/backend/src/main/webapp/app/views/manage_notice/main.html
@@ -2,13 +2,13 @@
 
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">งานที่สั่งพิมพ์</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> แสดงงานที่สั่งพิมพ์
@@ -20,7 +20,7 @@
 							<form class="form-inline" ng-submit="search()" name="searchForm" novalidate>
 							
 								<div class="row">
-									<div class="col-lg-12">
+									<div class="col-md-12">
 									
 									  <div class="form-group input-group">
 									  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
