--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<h1 class="page-header">นำเข้างานใหม่</h1>
 	</div>
 </div>
@@ -73,7 +73,7 @@
                        </div>
                    </div>
                    <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                      <!-- <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
                          <span class="glyphicon glyphicon-upload"></span> Upload all
                      </button> -->
@@ -84,7 +84,7 @@
                          <span class="glyphicon glyphicon-trash"></span> Remove all
                      </button> -->
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                      <input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
                        
                       	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลเสริม</button>
@@ -168,13 +168,13 @@
 				  <div class="panel-body">
 				  
 				  	<div class="row" ng-repeat="item in menus"> 
-				  		<div class="col-lg-7" style="text-align: center;">
-						  	<button class="btn btn-primary col-lg-8" type="button" style="margin-bottom: 3px;" ng-click="gotoImportOthers(item, 'search')"
+				  		<div class="col-md-7" style="text-align: center;">
+						  	<button class="btn btn-primary col-md-8" type="button" style="margin-bottom: 3px;" ng-click="gotoImportOthers(item, 'search')"
 						  	        editable-text="item.menuName" e-style="margin-bottom: 3px; min-width: 200px;" e-name="menuName" e-form="rowform">{{ item.menuName }}</button>
 						  	&nbsp;
-				  	        <span class="col-lg-4" editable-checkbox="item.isPgs" e-name="isPgs" e-title="ปกส.?" e-form="rowform"></span>
+				  	        <span class="col-md-4" editable-checkbox="item.isPgs" e-name="isPgs" e-title="ปกส.?" e-form="rowform"></span>
 				  		</div>
-				  		<div class="col-lg-5" style="text-align: right;" ng-show="group0">
+				  		<div class="col-md-5" style="text-align: right;" ng-show="group0">
 				  			<form editable-form name="rowform" onbeforesave="saveMenu($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
 					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
 					          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewMenu(item)" class="btn btn-default">ยกเลิก</button>
