--- a/backend/src/main/webapp/app/views/pages/blank.html
+++ b/backend/src/main/webapp/app/views/pages/blank.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">Blank</h1>
 		</div>
-		<!-- /.col-lg-12 -->
+		<!-- /.col-md-12 -->
 	</div>
 	<!-- /.row -->
 </div>
