--- a/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
@@ -46,7 +46,7 @@
                  	<span><small>จำนวน {{ checkList_his_3.length || 0 }} บัญชี</small></span>
              </div>
          </div>
-         <!-- /.col-lg-4 -->
+         <!-- /.col-md-4 -->
      </div>
      
      <div class="col-md-6">
@@ -92,7 +92,7 @@
                	<span><small>จำนวน {{ checkList_his_1.length || 0 }} บัญชี</small></span>
              </div>
          </div>
-         <!-- /.col-lg-4 -->
+         <!-- /.col-md-4 -->
      </div>
      
 </div>            
