--- a/backend/src/main/webapp/app/views/pay_online_checking/load_data.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/load_data.html
@@ -48,8 +48,8 @@
                </div>
            </div>
            <div class="row">
-           		<div class="col-lg-6"></div>
-	            <div class="col-lg-6">
+           		<div class="col-md-6"></div>
+	            <div class="col-md-6">
 	            	<input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader"
 	            	accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
 	            </div>
