--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -2,7 +2,7 @@
 	<div class="panel-heading">
 		<form class="form-inline" ng-submit="search()" name="searchForm" novalidate>
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-md-12">
 				
 				  <div class="form-group input-group" ng-show="group2">
 				  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
