--- a/backend/src/main/webapp/app/views/payment_result_report/main.html
+++ b/backend/src/main/webapp/app/views/payment_result_report/main.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<h1 class="page-header">นำเข้าแบบฟอร์ม Payment</h1>
 	</div>
 </div>
@@ -65,10 +65,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-6">
+						<div class="col-md-6">
 							
 						</div>
-						<div class="col-lg-6">
+						<div class="col-md-6">
 							<input type="file" class="form-control pull-left"
 								style="width: 300px;" nv-file-select="" uploader="uploader"
 								accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
