--- a/backend/src/main/webapp/app/views/plugin/main.html
+++ b/backend/src/main/webapp/app/views/plugin/main.html
@@ -8,13 +8,13 @@
 </style>
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">Plugin</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
@@ -80,13 +80,13 @@
 									</div>
 								</div>
 								<div class="row">
-									<!-- <div class="col-lg-6"></div>
-									<div class="col-lg-6">
+									<!-- <div class="col-md-6"></div>
+									<div class="col-md-6">
 										<input type="file" class="form-control pull-left"
 											style="width: 300px;" nv-file-select="" uploader="uploader" />
 									</div> -->
 									
-									<div class="col-lg-12">
+									<div class="col-md-12">
 						            	<div class="form-inline pull-right">
 							            	<div class="form-group input-group">
 											  	<span class="input-group-addon">Module</span>
