--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -1,4 +1,4 @@
-<div class="col-lg-6" style="margin-top: 15px; color: #337AB7;">
+<div class="col-md-6" style="margin-top: 15px; color: #337AB7;">
 	<form name="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
 		<div class="form-group" ng-class="{'has-error':addUserForm.productName.$invalid}">
 			<label class="control-label">ชื่อโปรดักส์ *</label>
@@ -44,7 +44,7 @@
 		</div>
 	</form>
 </div>
-<div class="col-lg-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
+<div class="col-md-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
 	<div class="panel panel-default">
          <div class="panel-heading">
              Payment Setting
