--- a/backend/src/main/webapp/app/views/tools/fileConvert.html
+++ b/backend/src/main/webapp/app/views/tools/fileConvert.html
@@ -48,7 +48,7 @@
                </div>
            </div>
            <div class="row">
-	            <div class="col-lg-12">
+	            <div class="col-md-12">
 	            	<div class="form-inline pull-right">
 		            	<div class="form-group input-group" ng-show="isEncodingShow">
 						  	<span class="input-group-addon">Splitter</span>
