--- a/backend/src/main/webapp/app/views/tools/main.html
+++ b/backend/src/main/webapp/app/views/tools/main.html
@@ -6,13 +6,13 @@
 </style>
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">Tools</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                 	<i class="fa fa-list-alt fa-fw"></i> {{ titlePanel || 'Tool Menu' }}
