--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -1,7 +1,7 @@
 <form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate style="margin-top: 15px; color: #337AB7;">
-		<div class="col-lg-6">
+		<div class="col-md-6">
 			<div class="row">
-				<div class="col-lg-6">
+				<div class="col-md-6">
 					<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
 						<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
 						<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
@@ -37,7 +37,7 @@
 					    </select>
 					</div>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-md-6">
 					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
 					
 						<label class="control-label">ชื่อ</label>
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 		
-		<!-- <div class="col-lg-4">
+		<!-- <div class="col-md-4">
 			<div class="form-group" ng-class="{'has-error':addUserForm.products.$invalid}">
 				<label class="control-label">โปรดักส์ *</label>
 				<select name="products" class="form-control" ng-model="user.products" size="10" multiple style="overflow: auto;"
@@ -116,11 +116,11 @@
                  </label>
              </div>
 		</div> -->
-		<div class="col-lg-2">
+		<div class="col-md-2">
 			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">		
 		</div>
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-md-12">
 				<div style="text-align: center;">
 					<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
 					<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
