--- a/backend/src/main/webapp/app/views/war_file/main.html
+++ b/backend/src/main/webapp/app/views/war_file/main.html
@@ -1,12 +1,12 @@
 <div>
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<h1 class="page-header">Upload WAR File</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
@@ -88,7 +88,7 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-lg-6">
+									<div class="col-md-6">
 										<!-- <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
 					                            <span class="glyphicon glyphicon-upload"></span> Upload all
 					                        </button> -->
@@ -99,7 +99,7 @@
 					                            <span class="glyphicon glyphicon-trash"></span> Remove all
 					                        </button> -->
 									</div>
-									<div class="col-lg-6">
+									<div class="col-md-6">
 										<input type="file" class="form-control pull-left"
 											style="width: 300px;" nv-file-select="" uploader="uploader" />
 									</div>
