--- a/backend/src/main/webapp/app/views/working/tab_related.html
+++ b/backend/src/main/webapp/app/views/working/tab_related.html
@@ -1,5 +1,5 @@
 
-<div class="table-responsive col-lg-12" style="padding: 0; margin: 0;">
+<div class="table-responsive col-md-12" style="padding: 0; margin: 0;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
