--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -28,7 +28,7 @@
 </style>
 <div id="taskDetailStick" style="z-index: 10; background-color: #FFFFFF">
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<div class="btn-group pull-left" style="margin: 0px 0 3px 0;">
 		  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
@@ -109,12 +109,12 @@
 -->
 <!-- <div class="collapse" id="collapseAccList"> -->
 	<div class="row" style="margin-top: 3px;">
-		<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
+		<div class="col-md-12" ng-include="'./views/working/tab_tasklist.html'"></div>
 	</div>
 <!-- </div> -->
 
 <div class="row collapse in" id="collapseActionPanel">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
 		  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
 		</div>
@@ -141,7 +141,7 @@
 		</div>
 		
 	</div>
-	<div class="col-lg-12" style="min-height: 315px;" ng-include="lastTabActionMenuActive.url"></div>
+	<div class="col-md-12" style="min-height: 315px;" ng-include="lastTabActionMenuActive.url"></div>
 </div>
 
 
@@ -159,10 +159,10 @@
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 				  <div class="panel-body">
 				  	<div class="row" ng-repeat="file in files"> 
-				  		<div style="text-align: center;" ng-class="{'col-lg-8': haveDateInput, 'col-lg-12': !haveDateInput}">
-						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id, file.dateInput)" ng-disabled="file.isDateInput && !file.dateInput">{{ file.templateName }}</button>
+				  		<div style="text-align: center;" ng-class="{'col-md-8': haveDateInput, 'col-md-12': !haveDateInput}">
+						  	<button class="btn btn-primary col-md-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id, file.dateInput)" ng-disabled="file.isDateInput && !file.dateInput">{{ file.templateName }}</button>
 				  		</div>
-				  		<div class="col-lg-4" style="text-align: center;" ng-if="file.isDateInput">
+				  		<div class="col-md-4" style="text-align: center;" ng-if="file.isDateInput">
 				  			<input type="text" class="form-control date-input" placeholder="ข้อมูลวันที่" ng-disabled="false" readonly="readonly" date-parser="dd/MM/yyyy" ng-model="file.dateInput">
 				  		</div>
 				  	</div>
@@ -193,19 +193,19 @@
 					  
 						
 						  <div class="row">
-							  <div class="form-group col-lg-8" ng-class="{'has-error':saveAskModalForm.resultText.$invalid}">
+							  <div class="form-group col-md-8" ng-class="{'has-error':saveAskModalForm.resultText.$invalid}">
 							    <label class="control-label">ผลการติดตาม</label>
 						  		<textarea name="resultText" class="form-control" style="resize: none;" rows="3" ng-model="askModalObj.trace.resultText" required></textarea>
 							  </div>
 							  
-							  <div class="form-group col-lg-4">
+							  <div class="form-group col-md-4">
 								<label class="control-label">เบอร์โทร</label>
 								<input name="userNameShow" class="form-control" ng-model="askModalObj.trace.tel">
 							  </div>
 						  </div>
 						  
 						  <div class="row">
-							  <div class="col-lg-6">
+							  <div class="col-md-6">
 								<div class="form-group">
 									<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
 									<div class="input-group">
@@ -217,7 +217,7 @@
 									</div>
 								</div>
 							  </div>
-							  <div class="col-lg-6">					  
+							  <div class="col-md-6">					  
 								<div class="form-group">
 									<label class="control-label">วันนัด Call</label>
 									<div class="input-group">
@@ -227,7 +227,7 @@
 								    </div>
 								</div>
 							  </div>
-							  <div class="col-lg-12">
+							  <div class="col-md-12">
 							  
 							  
 							  
@@ -245,7 +245,7 @@
 							  			
 							  				<em><u>แบบฟอร์ม Notice</u></em>
 							  				<div class="row">
-								  				<div class="col-lg-4" ng-repeat="nf in askModalObj.noticeFiles">
+								  				<div class="col-md-4" ng-repeat="nf in askModalObj.noticeFiles">
 								  					<div class="radio">
 														<label>
 													    	<input type="radio" name="noticeFormRadio" 
